# synt-tester

./: main.py  pyproject.toml
app/: app.py  config.py
app/routers/: board_router.py  task_router.py
schemas/: boards.py
