[tool.poetry]
name = "synt-tester"
version = "0.1.0"
description = ""
authors = ["Max <nverlieu@gmail.com>"]
readme = "README.md"
packages = [{include = "synt_tester"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
pydantic = "^1.10.2"
sqlalchemy = {extras = ["postgres"], version = "^1.4.45"}
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
